# Partial-Picking

./: .env  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DB-Flow.md  README.md  agents.md  package-lock.json  package.json  prompt.md  restart-servers.bat  start-Partial.bat  start-production.bat
.bmad-core/: install-manifest.yaml
backend/: .clippy.toml  .env  .env.example  .rustfmt.toml  Cargo.toml  IMPLEMENTATION_SUMMARY.md
backend/src/: config.rs  error.rs  main.rs
backend/src/api/: auth.rs  bins.rs  lots.rs  mod.rs  pallets.rs  picks.rs  runs.rs  workstations.rs
backend/src/db/: connection.rs  mod.rs
backend/src/db/queries/: README.md  TEST_SCENARIOS.md  TRANSACTION_QUERIES_README.md  VALIDATION_REPORT.md  batch_items.sql  bin_filtering.sql  fefo_lot_selection.sql  get_next_sequence.sql  item_already_picked.sql  phase1_lot_allocation.sql  phase2_weight_update.sql  phase3_transaction_record.sql  phase4_inventory_commit.sql  run_details.sql  unpick_phase1_reset_weight.sql  unpick_phase2_delete_lot_allocation.sql  unpick_phase3_delete_transaction.sql  unpick_phase4_decrement_commit.sql  weight_tolerance_validation.sql  workstation_config.sql
backend/src/middleware/: auth.rs
backend/src/models/: bin.rs  lot.rs  mod.rs  pallet.rs  pick.rs  pick_item.rs  production_run.rs  transaction.rs  user.rs  weight_scale.rs  workstation.rs
backend/src/services/: auth_service.rs  bin_service.rs  lot_service.rs  mod.rs  pallet_service.rs  picking_service.rs  run_service.rs  sequence_service.rs  workstation_service.rs
backend/src/utils/: jwt.rs
backend/tests/: CONTRACT_TESTS_SUMMARY.md
backend/tests/contract/: README.md  auth_contract_test.rs  lots_contract_test.rs  picking_contract_test.rs  runs_contract_test.rs  test_helpers.rs
backend/tests/performance/: api_performance_test.rs
backend/tests/unit/: fefo_tests.rs  mod.rs  transaction_tests.rs  validation_tests.rs
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  PRODUCTION_READINESS_CHECKLIST.md  README.md  brainstorming-session-results-2025-10-08.md  front-end-spec.md  performance-baseline-2025-10-10.md  phase-1-summary-and-next-steps.md  phase-2-complete.md  phase-3-quick-checklist.md  (+6 more)
docs/Ref-Bulk/backend/: Cargo.toml  package.json
docs/Ref-Bulk/backend/src/: main.rs  main_intelligence_routes.patch
docs/Ref-Bulk/backend/src/database/: bulk_runs.rs  bulk_runs_intelligence.rs  mod.rs  putaway.rs  putaway_db.rs
docs/Ref-Bulk/backend/src/handlers/: bulk_runs.rs  mod.rs  putaway.rs
docs/Ref-Bulk/backend/src/middleware/: auth.rs
docs/Ref-Bulk/backend/src/models/: api_errors.rs  api_response.rs  bulk_runs.rs  ingredient_intelligence.rs  inventory.rs  mod.rs  putaway.rs  putaway_models.rs
docs/Ref-Bulk/backend/src/services/: bulk_picking_validation.rs  bulk_runs_service.rs  ingredient_intelligence_service.rs  mod.rs  putaway_service.rs
docs/Ref-Bulk/backend/src/tests/: bulk_runs_tests.rs  mod.rs  validation_tests.rs
docs/Ref-Bulk/backend/src/types/: mod.rs
docs/Ref-Bulk/backend/src/utils/: auth.rs  mod.rs  timezone.rs  user_management.rs
(+275 files in other folders)
